# display

./: .gitmodules  .nospub  .nossign  CMakeLists.txt  nosDisplay.noscfg
.github/workflows/: build.yml  release.yml
Config/: DisplayOut.nosdef
Source/: CustomResolutionBase.cpp  CustomResolutionBase.h  DisplayMain.cpp  DisplayOut.cpp  NVIDIACustomResolution.cpp
